2008-05-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-hilit-commonality): Revert last change:
	the leftover code was actually useful.

2008-05-02  Sam Steingold  <sds@gnu.org>

	* vc.el (vc-dir-mode-map): Enable mouse bindings.
	(vc-at-event): New macro: run the body at the even location.
	(vc-dir-menu, vc-dir-toggle-mark): Use it.
	(vc-dir-mark-file, vc-dir-unmark-file): Move only on non-mouse events.
	* subr.d (mouse-event-p): Check if the even is mouse-related.

2008-05-02  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-info-breakpoints-custom):
	Don't throw error if no file is found.

2008-05-02  Juanma Barranquero  <lekktu@gmail.com>

	* vc-hooks.el (vc-call, vc-state): Fix typos in docstrings.
	(vc-default-state-heuristic): Doc fix.

2008-05-02  Richard Sharman  <rsharman@pobox.com>

	* hilit-chg.el (highlight-changes-mode): Remove references to
	hooks that no longer exist.  Because define-minor-mode is used the
	hook highlight-changes-mode-hook exists and can do what both the
	old hooks used to do.  The documentation at the top of the file
	was updated to demonstrate this.
	(highlight-changes-mode): Remove commented out call to a hook
	function that is no longer there.
	(hilit-chg-set): Remove running of highlight-changes-enable-hook.

2008-05-02  Eric S. Raymond  <esr@snark.thyrsus.com>

	* vc.el (vc-default-dired-state-info): Change name of primitive
	to prettify-state-info, in preparation for ripping out dired mode.
	* vc-bzr.el (vc-bzr-dired-state-info): Change name of primitive
	to prettify-state-info, in preparation for ripping out dired mode.
	* vc-hooks.el (vc-toggle-read-only): Throw an error when a user
	tries this on a version-controlled buffer.  It will do useless or
	actively bad things on any version control system newer than RCS.
	* vc-hooks.el (vc-dired-resynch-file):
	* vc.el (vc-dired-resynch-file): Change name of primitive to
	vc-directory-resynch-file, preparing to remove dired.
